--- a/Docs/src/manual.texi
+++ b/Docs/src/manual.texi
@@ -26,15 +26,8 @@ identical to this one.@*@*
 @top OGRE Manual
 Copyright @copyright{} The OGRE Team@*@*
 
-Permission is granted to make and distribute verbatim
-copies of this manual provided the copyright notice and
-this permission notice are preserved on all copies.@*@*
 
-Permission is granted to copy and distribute modified
-versions of this manual under the conditions for verbatim
-copying, provided that the entire resulting derived work is
-distributed under the terms of a permission notice
-identical to this one.@*@*
+This work is licenced under the Creative Commons Attribution-ShareAlike 2.5 License. To view a copy of this licence, visit @url{http://creativecommons.org/licenses/by-sa/2.5/} or send a letter to Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305, USA.@*@*
 
 @ifinfo
 @menu
