--- a/trunk/Docs/src/manual.texi
+++ b/trunk/Docs/src/manual.texi
@@ -1163,6 +1163,8 @@ See the IMPORTANT note below about the issues between mulitpass and multitexturi
 	As blend_diffuse_alpha but use current alpha from previous stages (same as blend_diffuse_alpha for first layer)
 @item blend_manual
 	As blend_diffuse_alpha but use a constant manual alpha value specified in <manual>
+@item blend_diffuse_colour
+	Use interpolated colour value from vertices to scale source1, then add source2 scaled by (1-colour).
 @end table
 @item Source1 and source2 options
 @table @asis
